# state-manager/core-api-server/core-api-spec.yaml
@@ -41,7 +41,7 @@ paths:
               schema:
                 "$ref": "#/components/schemas/NetworkConfigurationResponse"
         '500':
-          description: An error occurred
+          description: Server error
           content:
             application/json:
               schema:
@@ -65,8 +65,14 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/TransactionSubmitResponse"
+        '400':
+          description: Client error
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/ErrorResponse"
         '500':
-          description: An error occurred
+          description: Server error
           content:
             application/json:
               schema:
@@ -90,8 +96,44 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/TransactionPreviewResponse"
+        '400':
+          description: Client error
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/ErrorResponse"
         '500':
-          description: An error occurred
+          description: Server error
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/ErrorResponse"
+  "/transactions":
+    post:
+      summary: Get committed transactions
+      tags:
+        - Transaction
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              "$ref": "#/components/schemas/CommittedTransactionsRequest"
+      responses:
+        '200':
+          description: Committed transactions response
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/CommittedTransactionsResponse"
+        '400':
+          description: Client error
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/ErrorResponse"
+        '500':
+          description: Server error
           content:
             application/json:
               schema:
@@ -101,6 +143,121 @@ components:
 ###########################
 # GENERAL / SHARED MODELS #
 ###########################
+    TransactionStatus:
+      type: string
+      enum:
+        - succeeded
+        - failed
+        - rejected
+      description: The status of the transaction
+    TransactionReceipt:
+      type: object
+      required:
+        - status
+        - fee_summary
+      properties:
+        status:
+          "$ref": "#/components/schemas/TransactionStatus"
+        fee_summary:
+          "$ref": "#/components/schemas/FeeSummary"
+        output:
+          type: array
+          items:
+            type: string
+        error_message:
+          type: string
+    NotarizedTransaction:
+      type: object
+      required:
+        - hash
+        - signed_intent
+        - notary_signature
+      properties:
+        hash:
+          type: string
+        signed_intent:
+          "$ref": "#/components/schemas/SignedTransactionIntent"
+        notary_signature:
+          type: string
+    SignedTransactionIntent:
+      type: object
+      required:
+        - hash
+        - intent
+        - intent_signatures
+      properties:
+        hash:
+          type: string
+        intent:
+          "$ref": "#/components/schemas/TransactionIntent"
+        intent_signatures:
+          type: array
+          items:
+            "$ref": "#/components/schemas/IntentSignature"
+    IntentSignature:
+      type: object
+      required:
+        - public_key
+        - signature
+      properties:
+        public_key:
+          type: string
+        signature:
+          type: string
+    TransactionIntent:
+      type: object
+      required:
+        - hash
+        - header
+        - manifest
+      properties:
+        hash:
+          type: string
+        header:
+          "$ref": "#/components/schemas/TransactionHeader"
+        manifest:
+          type: string
+    TransactionHeader:
+      type: object
+      required:
+        - version
+        - network
+        - start_epoch_inclusive
+        - end_epoch_exclusive
+        - nonce
+        - notary_public_key
+        - notary_as_signatory
+        - cost_unit_limit
+        - tip_percentage
+      properties:
+        version:
+          type: integer
+        network:
+          "$ref": "#/components/schemas/Network"
+        start_epoch_inclusive:
+          type: string
+        end_epoch_exclusive:
+          type: string
+        nonce:
+          type: string
+        notary_public_key:
+          type: string
+        notary_as_signatory:
+          type: boolean
+        cost_unit_limit:
+          type: string
+        tip_percentage:
+          type: string
+    Network:
+      type: object
+      required:
+        - id
+        - name
+      properties:
+        id:
+          type: string
+        name:
+          type: string
     NetworkIdentifier:
       type: object
       required:
@@ -212,49 +369,12 @@ components:
 #########################################
 # GENERAL / SHARED MODELS - Transaction #
 #########################################
-    TransactionStatus:
-      type: object
-      required:
-        - type
-      properties:
-        type:
-          type: string
-      discriminator:
-        propertyName: type
-        mapping:
-          TransactionStatusRejected: "#/components/schemas/TransactionStatusRejected"
-          TransactionStatusSucceeded: "#/components/schemas/TransactionStatusSucceeded"
-          TransactionStatusFailed: "#/components/schemas/TransactionStatusFailed"
-    TransactionStatusRejected:
-      allOf:
-        - $ref: "#/components/schemas/TransactionStatus"
-        - type: object
-    TransactionStatusSucceeded:
-      allOf:
-        - $ref: "#/components/schemas/TransactionStatus"
-        - type: object
-          required:
-            - output
-          properties:
-            output:
-              type: array
-              items:
-                type: string
-    TransactionStatusFailed:
-      allOf:
-        - $ref: "#/components/schemas/TransactionStatus"
-        - type: object
-          required:
-            - message
-          properties:
-            message:
-              type: string
     FeeSummary:
       type: object
       required:
         - loan_fully_repaid
         - cost_unit_limit
-        - cost_units_consumed
+        - cost_unit_consumed
         - cost_unit_price
         - tip_percentage
         - xrd_burned
@@ -264,7 +384,7 @@ components:
           type: boolean
         cost_unit_limit:
           type: string
-        cost_units_consumed:
+        cost_unit_consumed:
           type: string
         cost_unit_price:
           type: string
@@ -397,7 +517,6 @@ components:
       properties:
         transaction_status:
           "$ref": "#/components/schemas/TransactionStatus"
-          description: The status of the transaction
         transaction_fee:
           "$ref": "#/components/schemas/FeeSummary"
           description: Fees to be paid
@@ -428,3 +547,54 @@ components:
           type: array
           items:
             type: string
+        output:
+          type: array
+          items:
+            type: string
+        error_message:
+          type: string
+##########################
+# REQUEST: /transactions #
+##########################
+    CommittedTransactionsRequest:
+      description: A request to retrieve a sublist of committed transactions from the
+        ledger.
+      type: object
+      required:
+        - network_identifier
+        - state_version
+        - limit
+      properties:
+        network_identifier:
+          "$ref": "#/components/schemas/NetworkIdentifier"
+          description: The name of the network
+        state_version:
+          type: integer
+          format: int64
+        limit:
+          description: The maximum number of transactions that will be returned.
+          type: integer
+    CommittedTransactionsResponse:
+      type: object
+      required:
+        - state_version
+        - transactions
+      properties:
+        state_version:
+          type: integer
+          format: int64
+        transactions:
+          description: A committed transactions list starting from the `state_version`.
+          type: array
+          items:
+            "$ref": "#/components/schemas/CommittedTransaction"
+    CommittedTransaction:
+      type: object
+      required:
+        - notarized_transaction
+        - receipt
+      properties:
+        notarized_transaction:
+          "$ref": "#/components/schemas/NotarizedTransaction"
+        receipt:
+          "$ref": "#/components/schemas/TransactionReceipt"
