# state-manager/core-api-server/src/core_api/mod.rs
@@ -62,7 +62,11 @@
  * permissions under this License.
  */
 
+mod network_configuration;
+mod preview;
 pub mod server;
+mod transactions;
+
 
 #[allow(unused)]
 #[rustfmt::skip]
